# rustapp

./: .cursorrules  .env.example  .env.test.example  .gitignore  AGENTS.md  ARCHITECTURE.md  AndroidManifest.xml  Cargo.toml  Dioxus.toml  LICENSE  LICENSE-COMMERCIAL.md  README.md  build.rs  docker-compose.test.yml  package-lock.json  skills-lock.json  tailwind.css
.cargo/: config.toml
api/: Cargo.toml  build.rs
api/src/: config.rs  error.rs  lib.rs  main.rs  state.rs  trace.rs
api/src/handlers/: get_programs.rs  login.rs  mark_day_as_completed.rs  mark_day_as_uncompleted.rs  mod.rs  refresh_session.rs
api/src/handlers/patients/: get_programs.rs  login_patient.rs  mark_day_as_completed.rs  mark_day_as_uncompleted.rs  mod.rs  refresh_session.rs
api/src/handlers/specialists/: add_exercise_to_workout.rs  add_specialist_patient.rs  assign_program_to_patient.rs  create_exercise.rs  create_program.rs  create_program_schedule_item.rs  create_workout.rs  delete_program_schedule_item.rs  delete_workout.rs  get_specialist_patients_with_profiles.rs  list_exercise_library.rs  list_program_schedule.rs  list_unassigned_patients.rs  list_workout_library.rs  login_specialist.rs  mod.rs  patient_progress.rs  remove_exercise_from_workout.rs  restore_exercise.rs  soft_delete_exercise.rs  specialist_programs_data.rs  update_exercise.rs  update_workout.rs  update_workout_exercise.rs  workout_editor_data.rs
api/src/router/: api_response.rs  fallback.rs  health.rs  mod.rs  paths.rs  patients_routes.rs  router.rs  specialists_routes.rs
app-flutter/: README.md  l10n.yaml  pubspec.yaml
application/: Cargo.toml
application/src/: error.rs  lib.rs
application/src/facade/: backoffice.rs  mobile.rs
application/src/facades/: backoffice.rs  mobile.rs  mod.rs
application/src/ports/: api.rs  auth.rs  auth_send.rs  backoffice_api.rs  data_mutator.rs  data_mutator_send.rs  data_provider.rs  data_provider_send.rs  error.rs  http_rest_client.rs  mobile_api.rs  mod.rs  patient_data_mutator.rs  patient_data_provider.rs  specialist_data_mutator.rs  specialist_data_provider.rs
application/src/ports/auth/: auth.rs  credentials.rs
application/src/test_mocks/: auth.rs  catalog_read.rs  catalog_write.rs  mod.rs  patient_session.rs  specialist_onboarding.rs
application/src/use_cases/: add_exercise_to_workout.rs  add_specialist_patient.rs  agenda_schedule.rs  assign_program_to_patient.rs  create_exercise.rs  create_program.rs  create_program_schedule_item.rs  create_workout.rs  delete_program_schedule_item.rs  delete_workout.rs  get_patient_programs.rs  get_specialist_patients_with_profiles.rs  list_exercise_library.rs  list_program_schedule.rs  list_unassigned_patients.rs  list_workout_library.rs  login.rs  mobile_get_patient_programs.rs  mobile_login.rs  mobile_submit_patient_workout_feedback.rs  mod.rs  patient_progress.rs  patient_workout_session.rs  refresh_session.rs  remove_exercise_from_workout.rs  restore_exercise.rs  soft_delete_exercise.rs  specialist_programs_data.rs  submit_patient_workout_feedback.rs  uncomplete_patient_workout_session.rs  update_exercise.rs  update_patient_workout_feedback.rs  update_workout.rs  update_workout_exercise.rs  workout_editor_data.rs
assets/: app.css  tailwind.css
backoffice-dioxus/: Cargo.toml  Dioxus.toml  tailwind.css
backoffice-dioxus/assets/: app.css  tailwind.css
backoffice-dioxus/assets/styling/: main.css
backoffice-dioxus/i18n/: en-EN.ftl  es-ES.ftl  gl-ES.ftl
backoffice-dioxus/src/: app_context.rs  context.rs  infrastructure.rs  lib.rs  main.rs
backoffice-dioxus/src/components/: agenda.rs  mod.rs  patient_workout.rs
backoffice-dioxus/src/components/backview/: component.rs
backoffice-dioxus/src/components/card_skeleton/: component.rs
backoffice-dioxus/src/components/login/: component.rs
backoffice-dioxus/src/hooks/: add_exercise_to_workout.rs  add_specialist_patient.rs  app_context.rs  assign_program_to_patient.rs  create_exercise.rs  create_program.rs  create_program_schedule_item.rs  create_workout.rs  delete_program_schedule_item.rs  delete_workout.rs  exercise_library.rs  link_patient.rs  list_program_schedule.rs  login.rs  mod.rs  patient_programs.rs  patient_progress.rs  remove_exercise_from_workout.rs  restore_exercise.rs  soft_delete_exercise.rs  specialist_patients.rs  specialist_programs.rs  submit_workout_feedback.rs  unassigned_patients.rs  uncomplete_workout_session.rs  update_exercise.rs  update_workout.rs  update_workout_exercise.rs  workout_day_detail.rs  workout_editor.rs  workout_library.rs  workout_library_data.rs
backoffice-dioxus/src/infrastructure/: app_context.rs
backoffice-dioxus/src/infrastructure/ui/components/: agenda.rs  patient_workout.rs
backoffice-dioxus/src/infrastructure/ui/components/login/: component.rs
backoffice-dioxus/src/infrastructure/ui/hooks/: mod.rs  patient_programs.rs  patient_progress.rs  specialist_patients.rs  specialist_programs.rs  submit_workout_feedback.rs  workout_day_detail.rs  workout_editor.rs  workout_library.rs
backoffice-dioxus/src/infrastructure/ui/views/: exercise_library.rs  workout_library.rs
backoffice-dioxus/src/views/: exercise_library.rs  login.rs  mod.rs  patient_dashboard.rs  patient_progress.rs  patient_workout_session.rs  program_editor.rs  specialist_dashboard.rs  specialist_programs.rs  workout_editor.rs  workout_library.rs
common/: Cargo.toml
docs/: ASIGNAR_ROL_USUARIO.md  android_local_notifications.md
domain/: Cargo.toml
i18n/: en-EN.ftl  es-ES.ftl  gl-ES.ftl
infrastructure/: Cargo.toml  build.rs
infrastructure/src/: lib.rs
infrastructure/src/api/: axum_client.rs  backoffice_client.rs  client.rs  config.rs  dtos.rs  mobile_client.rs  mod.rs  platforms_http_client.rs
infrastructure/src/supabase/: api.rs  auth.rs  client.rs  config.rs  mod.rs  native_api.rs
infrastructure/src/supabase/repositories/: mod.rs  supabase_rest_repository.rs
infrastructure/tests/: smoke_test.rs
infrastructure/tests/common/: config.rs  logger.rs  mod.rs
mobile-bridge-frb/: Cargo.toml
mobile-bridge-frb/src/: api.rs  frb_generated.rs  lib.rs
(+212 files in other folders)
