[workspace]
resolver = "2"
members = [
    "xtask",
    "common",
    "domain",
    "application",
    "infrastructure",
    "backoffice-dioxus",
    "mobile-bridge-frb",
]
default-members = ["backoffice-dioxus"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
