[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
application = { path = "../application" }
infrastructure = { path = "../infrastructure" }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Configuration
config = "0.15"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "registry",
    "env-filter",
    "json",
] }
tracing-appender = "0.2"
atty = "0.2"

# Others
async-trait = "0.1"
strum_macros = "0.28"
