[package]
name = "application"
version.workspace = true
edition.workspace = true

[dependencies]
domain = { path = "../domain" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
