[package]
name = "backoffice-dioxus"
version.workspace = true
edition.workspace = true
description = "Backoffice web app for specialists built with Dioxus"

[dependencies]
application = { path = "../application" }
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
dioxus = { version = "0.7", features = ["router"] }
dioxus-i18n = "0.5"
unic-langid = { version = "0.9", features = ["macros"] }
dioxus-router = "0.7"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
dioxus-free-icons = { version = "0.10", features = ["ionicons"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", default-features = false, features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
console_error_panic_hook = "0.1"
log = "0.4"
wasm-logger = "0.2"
clap = { version = "4", features = ["derive"] }
notify = "8"
anymap2 = "0.13.0"

[features]
default = ["web"]
web = ["dioxus/web", "uuid/js"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[[bin]]
name = "dev"
path = "src/bin/dev.rs"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
android_logger = "0.15"
