[package]
name = "infrastructure"
version.workspace = true
edition.workspace = true

[dependencies]
application = { path = "../application" }
common = { path = "../common" }
domain = { path = "../domain" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "native-tls-vendored",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = "0.6"
gloo-utils = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
dotenvy = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
