[package]
name = "mobile-bridge-frb"
version.workspace = true
edition.workspace = true
description = "Flutter Rust Bridge API for the patient mobile app"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
application = { path = "../application" }
infrastructure = { path = "../infrastructure" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flutter_rust_bridge = "=2.11.1"
log = "0.4"
env_logger = "0.11"
